--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
 .inputBox{
 	border: none;
 }
+
+.image {
+	display: inline-block;
+	border: 1px solid black;
+	border-radius: 5px;
+	margin: 10px;
+}
+
+img {
+	margin: 5px;
+}
